--- a/client/app/index.html
+++ b/client/app/index.html
@@ -14,6 +14,7 @@
   <!-- endbuild -->
   <!-- build:css(.tmp) styles/main.css -->
   <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
   <!-- endbuild -->
 </head>
@@ -38,6 +39,7 @@
 <!-- endbower -->
 <!-- endbuild -->
 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 <script src="scripts/app.js"></script>
 
 <!-- config -->
